<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.WalletFragment"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:weightSum="3"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_balance"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_account"
                android:textSize="20sp"
                android:gravity="start"
                android:textColor="@android:color/white"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/balance_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="300"
                android:textSize="36sp"
                android:gravity="center"
                android:textColor="@android:color/white"/>



        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">



                <EditText
                    android:id="@+id/amount_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_margin="20dp"/>

            <Button
                android:id="@+id/fund_wallet_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fund_wallet"
                android:textAllCaps="false"
                android:backgroundTint="@color/colorAccent"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>